Add workaround for JDK17 and Kapt
See https://youtrack.jetbrains.com/issue/KT-45545